fixed horizontal scroll index.html and MQ

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -141,12 +141,12 @@ img {
 
 /* ====footer===== */
 
-.copyright {
+footer {
     text-align: center;
-    padding-top: 10px;
+    // padding-top: 10px;
     background-color: #333;
-    height: 4vh;
-    min-width: 330px;
+    // height: 3vh;
+    // min-width: 330px;
 
     i {
         font-size: 1rem;
