--- a/styles/sass/partials/_indexSections.scss
+++ b/styles/sass/partials/_indexSections.scss
@@ -50,7 +50,6 @@
                 font-weight: 600;
                 font-size: 25px;
                 line-height: 50px;
-                text-align: center;
                 width: 45px;
                 height: 45px;
                 border-radius: 50%;
@@ -69,6 +68,10 @@
             .community::before {content: "\f0c0";}
             .blogImg::before {content: "\f15b";}
             .getInTouch::before {content: "\f879";}
+
+            h3 {
+                text-align: left;
+            }
         }
     }
 }
@@ -114,7 +117,7 @@
                 // base style for both images
                 .image {
                     position: absolute;
-                    width: calc(50vw - 100px);
+                    width: calc(50vw - 109px);
                     height: 100%;
                     object-fit: cover;
                     box-shadow: -20px 20px 0px -0px $dustyOrange;
@@ -184,11 +187,11 @@
 /* ====image banner===== */
 
 .imageBreak {
-    width: 100vw;
+    width: 100%;
 
     img {
         width: 100%;
-        min-height: 40vh;
+        min-height: 45vh;
         object-fit: cover;
         object-position: right;
     }
