--- a/styles/styles.css
+++ b/styles/styles.css
@@ -393,14 +393,11 @@ img {
 }
 
 /* ====footer===== */
-.copyright {
+footer {
   text-align: center;
-  padding-top: 10px;
   background-color: #333;
-  height: 4vh;
-  min-width: 330px;
 }
-.copyright i {
+footer i {
   font-size: 1rem;
 }
 
@@ -551,7 +548,6 @@ a {
   font-weight: 600;
   font-size: 25px;
   line-height: 50px;
-  text-align: center;
   width: 45px;
   height: 45px;
   border-radius: 50%;
@@ -581,6 +577,9 @@ a {
 }
 .information ul li .getInTouch::before {
   content: "\f879";
+}
+.information ul li h3 {
+  text-align: left;
 }
 
 /* ====blog section===== */
@@ -622,7 +621,7 @@ a {
 }
 .blog .wrapper .row .imageContainer .image {
   position: absolute;
-  width: calc(50vw - 100px);
+  width: calc(50vw - 109px);
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -688,11 +687,11 @@ a {
 
 /* ====image banner===== */
 .imageBreak {
-  width: 100vw;
+  width: 100%;
 }
 .imageBreak img {
   width: 100%;
-  min-height: 40vh;
+  min-height: 45vh;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: right;
@@ -1028,6 +1027,9 @@ a {
        -moz-column-gap: 100px;
             column-gap: 100px;
   }
+  .blog .wrapper .row .imageContainer .image {
+    width: calc(50vw - 50px);
+  }
   .formContainer .topRow {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1084,7 +1086,7 @@ a {
     text-align: center;
   }
   .blog .wrapper .row .imageContainer .image {
-    width: 100vw;
+    width: 100%;
   }
   .blog .wrapper .row .textContainer {
     -webkit-box-ordinal-group: 2;
